build: adicionado paginas de um site de exemplo

--- a/lojinhaLegal2.0/Pages/Privacy.cshtml
+++ b/lojinhaLegal2.0/Pages/Privacy.cshtml
@@ -5,4 +5,4 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>Favor nao roubar meu site feito com tanto esforço, amor e carinho  ok.</p>
