--- a/lojinhaLegal2.0/Pages/_ViewImports.cshtml
+++ b/lojinhaLegal2.0/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using lojinhaLegal2._0
-@namespace lojinhaLegal2._0.Pages
+﻿@using LojinhaLegal
+@namespace LojinhaLegal.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
