--- a/LojinhaLegalV3/Pages/Produtos.cshtml
+++ b/LojinhaLegalV3/Pages/Produtos.cshtml
@@ -8,7 +8,7 @@
     {
         <li>
             <strong>@produto.Nome</strong> - @produto.Preco:C <br />
-            <img src="~/imagens/@produto.Imagem" alt="@produto.Nome" /><br />
+            <img src="@produto.Imagem" alt="@produto.Nome" /><br />
             <p>@produto.Descricao</p>
             <p>Categoria: @produto.Categoria</p>
         </li>
